--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
         </div>
     </nav>
 
+    <!-- Header -->
+    <header id="header" class="max-width">
+        <div class="header__left">
+            <h1>Olá! Sou Fernando Canhoto, Administrador e Engenheiro de Software</h1>
+            <p>
+                Sou apaixonado por gestão e tecnologia. Tenho perfil multidisciplinar com experiência em gestão de processos e pessoas há mais de 7 anos. Graduado em Processos Gerenciais, MBA em Gestão Empresarial e Engenharia de Software.
+            </p>
+            <a href="#about" class="btn btn-primary">Saiba Mais!</a>
+        </div>
+        <div class="header__right"></div>
+    </header>
+
     <!-- Script -->
     <script src="scripts/index.js"></script>
 </body>
