--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
             </p>
             <a href="#about" class="btn btn-primary">Saiba Mais!</a>
         </div>
-        <div class="header__right"></div>
+
+        <div class="header__right">
+            <div class="header__image">
+                <img src="assets/fernando-canhoto.png" alt="Fernando">
+                <img src="assets/abstract.svg" alt="background" class="background">
+            </div>
+        </div>
     </header>
 
     <!-- Script -->
