--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="header__right">
             <div class="header__image">
-                <img src="assets/fernando-canhoto.png" alt="Fernando">
+                <img src="assets/fernando-canhoto.png" alt="Fernando Canhoto" class="fernando">
                 <img src="assets/abstract.svg" alt="background" class="background">
             </div>
         </div>
