--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         </div>
     </header>
 
+    <!-- Sobre -->
+    <section id="about" class="about max-width">
+        <div class="about__left">
+            <h2 class="secondary-title">Além do código: Quem sou eu?</h2>
+            <p>Que tal se conectar comigo nas redes sociais abaixo e saber mais sobre meu trabalho?</p>
+        </div>
+    </section>
+
     <!-- Script -->
     <script src="scripts/index.js"></script>
 </body>
