--- a/index.html
+++ b/index.html
@@ -56,7 +56,25 @@
     <section id="about" class="about max-width">
         <div class="about__left">
             <h2 class="secondary-title">Além do código: Quem sou eu?</h2>
-            <p>Que tal se conectar comigo nas redes sociais abaixo e saber mais sobre meu trabalho?</p>
+            <p>
+                Que tal se conectar comigo nas redes sociais abaixo e saber mais sobre meu trabalho?
+            </p>
+            <ul>
+                <li><a href="#"><img src="/assets/instagram.svg" alt="Instagram"></a></li>
+                <li><a href="#"><img src="/assets/linkedin.svg" alt="LinkedIn"></a></li>
+                <li><a href="#"><img src="/assets/facebook.svg" alt="Facebook"></a></li>
+            </ul>
+        </div>
+        <div class="about__right">
+            <h3 class="tertiary-title mb-m">
+                Administrador de empresas e Engenheiro de Software apaixonado por tecnologia e soluções criativas. 
+            </h3>
+            <p>
+                Apaixonado por gestão e tecnologia. Tenho perfil multidisciplinar com experiência em gestão de processos e pessoas há mais de 7 anos. Graduado em Processos Gerenciais e MBA em Gestão Empresarial.
+            </p>
+            <p>
+                Amo o desafio de encontrar soluções inovadoras e criativas para problemas complexos e estou buscando aprender e crescer como profissional.
+            </p>
         </div>
     </section>
 
