--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
         </div>
     </section>
 
+    <!-- Skills -->
+    <section id="skills" class="skills">
+        <h2 class="tertiary-title">Minha caixinha de ferramentas</h2>
+    </section>
+
     <!-- Script -->
     <script src="scripts/index.js"></script>
 </body>
