--- a/index.html
+++ b/index.html
@@ -78,9 +78,34 @@
         </div>
     </section>
 
-    <!-- Skills -->
+    <!-- Habilidades -->
     <section id="skills" class="skills">
-        <h2 class="tertiary-title">Minha caixinha de ferramentas</h2>
+        <div class="skills__content max-width">
+            <h2 class="tertiary-title">Minha caixinha de ferramentas</h2>
+            <p class="description">
+                Descubra as habilidades e ferramentas que domino e que me permitem criar soluções criativas e funcionais para meus clientes.
+            </p>
+            <ul>
+                <li class="skills__item">
+                    <div class="image-container">
+                        <img src="assets/notebook.png" alt="Desenvolvimento Web">
+                    </div>
+                    <h3>Desenvolvimento Web</h3>
+                    <p>
+                        Experiência em desenvolvimento fullstack com foco em tecnologias modernas.
+                    </p>
+                </li>
+                <li class="skills__item">
+                    <div class="image-container">
+                        <img src="assets/colors.png" alt="Web Design">
+                    </div>
+                    <h3>Web Design</h3>
+                    <p>
+                        Habilidade em criar layouts modernos e responsivos, com foco na experiência do usuário.
+                    </p>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <!-- Script -->
