--- a/index.html
+++ b/index.html
@@ -104,9 +104,119 @@
                         Habilidade em criar layouts modernos e responsivos, com foco na experiência do usuário.
                     </p>
                 </li>
+                <li class="skills__item">
+                    <div class="image-container">
+                      <img src="assets/phone.png" alt="UX/UI Design" />
+                    </div>
+                    <h3>UX/UI Design</h3>
+                    <p>
+                      Conhecimentos em design de interface e experiência do usuário
+                      visualmente atraentes e intuitivas.
+                    </p>
+                  </li>
+                  <li class="skills__item">
+                    <div class="image-container">
+                      <img src="assets/files.png" alt="Gerenciamentos de versões" />
+                    </div>
+                    <h3>Gerenciamentos de versões</h3>
+                    <p>
+                      Experiência em ferramentas de gerenciamento de versão para
+                      controle de projetos.
+                    </p>
+                </li>
             </ul>
         </div>
     </section>
+        
+    <!-- Projetos -->
+    <section id="projects" class="projects max-width">
+        <div class="projects__content">
+            <h2 class="secondary-title">Projetos em Destaque</h2>
+            <p>
+                De ideias abstratas a projetos bem-sucedidos, aqui estão alguns dos
+                meus trabalhos mais recentes
+            </p>
+        </div>
+        <ul>
+            <li>
+                <div class="image">
+                    <img src="assets/task-manager.png" alt="Gerenciamento de tarefas" />
+                </div>
+                <div class="projects__info">
+                    <h3 class="tertiary-title">
+                        Sistema de gerenciamento de tarefas DEF
+                    </h3>
+                    <p>
+                      Sistema web desenvolvido para a empresa DEF, com funcionalidades
+                      como cadastro de tarefas, atribuição de responsáveis e
+                      acompanhamento do status das atividades.
+                    </p>
+                    <a href="#">Leia mais &rarr;</a>
+                </div>
+                </li>
+                <li class="projects__reversed-list">
+                    <div class="image">
+                        <img src="assets/ecommerce.png" alt="ecommerce" />
+                    </div>
+                    <div class="projects__info">
+                        <h3 class="tertiary-title">
+                            Desenvolvimento de Loja Virtual MeuSofazim.com
+                        </h3>
+                        <p>
+                            Site de e-commerce desenvolvido do zero com tecnologias como React
+                            e Node.js, além de integração com diversos meios de pagamento e
+                            entrega.
+                        </p>
+                        <a href="#">Leia mais &rarr;</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="image">
+                        <img src="assets/delivery.png" alt="delivery" />
+                    </div>
+                    <div class="projects__info">
+                        <h3 class="tertiary-title">
+                            App de delivery e Dashboard DeliveryJá!
+                        </h3>
+                        <p>
+                            Aplicativo mobile desenvolvido para a empresa DeliveryJá!,
+                            permitindo a realização de pedidos e acompanhamento em tempo real
+                            do status da entrega.
+                        </p>
+                        <a href="#">Leia mais &rarr;</a>
+                    </div>
+                </li>
+              </ul>
+            </section>
+        
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="footer__content max-width mb-0">
+            <h2 class="tertiary-title mb-s">Vamos conversar?</h2>
+            <p class="mb-m">
+                Ficarei feliz em saber mais sobre seus projetos e como podemos
+                trabalhar juntos para torná-los realidade.
+            </p>
+            <div class="footer__contact mb-m">
+                <span class="mb-m">ficticio@email.com</span>
+                <span>00 00000-0000</span>
+            </div>
+            <ul class="mb-l">
+                <li>
+                    <a href="#"><img src="assets/instagram.svg" alt="Instagram" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="assets/facebook.svg" alt="Facebook" /></a>
+                </li>
+            </ul>
+            <p class="footer__copyright">
+                © 2023 Lucas Silva. Todos os direitos reservados.
+            </p>
+        </div>
+    </footer>
 
     <!-- Script -->
     <script src="scripts/index.js"></script>
