--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </li>
             </ul>
             <p class="footer__copyright">
-                © 2023 Lucas Silva. Todos os direitos reservados.
+                © 2024 Fernando Canhoto. Todos os direitos reservados.
             </p>
         </div>
     </footer>
